syntax = "proto3";
package routerprotocol.routerchain.crosstalk;

option go_package = "github.com/router-protocol/sdk-go/routerchain/crosstalk/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

enum CrossTalkRequestAckType {
  option (gogoproto.goproto_enum_prefix) = false;

  CROSSTALK_REQUEST_NO_ACK = 0 [(gogoproto.enumvalue_customname) = "CROSSTALK_REQUEST_NO_ACK"];
  CROSSTALK_REQUEST_ACK_ON_SUCCESS = 1 [(gogoproto.enumvalue_customname) = "CROSSTALK_REQUEST_ACK_ON_SUCCESS"];
  CROSSTALK_REQUEST_ACK_ON_ERROR = 2 [(gogoproto.enumvalue_customname) = "CROSSTALK_REQUEST_ACK_ON_ERROR"];    
  CROSSTALK_REQUEST_ACK = 3 [(gogoproto.enumvalue_customname) = "CROSSTALK_REQUEST_ACK"];  
}