syntax = "proto3";
package routerprotocol.routerchain.crosstalk;

import "crosstalk/cross_talk_request.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/router-protocol/sdk-go/routerchain/crosstalk/types";

import "multichain/chain_type.proto"; 

// Msg defines the Msg service.
service Msg {
      rpc CrossTalkRequest(MsgCrossTalkRequest) returns (MsgCrossTalkRequestResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCrossTalkRequest {
  string orchestrator = 1;
  uint64 eventNonce = 2;
  uint64 blockHeight = 3;
  routerprotocol.routerchain.multichain.ChainType chainType = 4; 
  string chainId = 5;  
  string sourceTxHash = 6;
  routerprotocol.routerchain.multichain.ChainType destinationChainType = 7;
  string destinationChainId = 8;
  uint64 destinationGasLimit = 9;
  uint64 destinationGasPrice = 10;
  string requestSender = 11;
  uint64 requestNonce = 12;
  bool isAtomic = 13;  
  uint64 expiryTimestamp = 14;
  repeated bytes destContractAddresses = 15;
  repeated bytes destContractPayloads = 16;
  uint64 ackType = 17;
  uint64 ackGasLimit = 18;
  uint64 ackGasPrice = 19;
  string ethSigner = 20;
  string signature = 21;
}
message MsgCrossTalkRequestResponse {}

// this line is used by starport scaffolding # proto/tx/message
